Fix timer on mobile devices

--- a/src/app/components/header/header.less
+++ b/src/app/components/header/header.less
@@ -29,7 +29,7 @@
     padding: 20px;
     font-size: 25px;
   }
-  
+
   .timer {
       color: #0F497F;
       font-size: 80px;
@@ -87,6 +87,10 @@
       h1 {
         font-size: 40px !important;
       }
+    }
+
+    .timer {
+      font-size: 50px;
     }
   }
 }
